modules/eks/service.tf
# # Resource: MySQL Cluster IP Service
# resource "kubernetes_service_v1" "mysql_clusterip_service" {
#   metadata {
#     name = "mysql"
#   }
#   spec {
#     selector = {
#       app = kubernetes_deployment_v1.mysql_deployment.spec.0.selector.0.match_labels.app 
#     }
#     port {
#       port        = 3306 # Service Port
#       #target_port = 3306 # Container Port  # Ignored when we use cluster_ip = "None"
#     }
#     type = "ClusterIP"
#     cluster_ip = "None" # This means we are going to use Pod IP   
#   }
# }


# # Resource: Kubernetes Service Manifest (Type: NodePort)
# resource "kubernetes_service_v1" "nodeport_service" {
#   metadata {
#     name = "usermgmt-webapp-nodeport-service"
#   }
#   spec {
#     selector = {
#       app = kubernetes_deployment_v1.usermgmt_webapp.spec.0.selector.0.match_labels.app
#     }
#     port {
#       port        = 80
#       target_port = 8080
#       node_port = 31280
#     }

#     type = "NodePort"
#   }
# }
